-Asignación de Empresa a usuarios Finales de acuerdo a Empresa del usuario activo -Creación de Grupos de Usuarios Finales -Carga de Archivo CSV para generación de usuarios Finales -Ignorar Imagenes Cargadas

--- a/app/Resources/views/admin/menu.html.twig
+++ b/app/Resources/views/admin/menu.html.twig
@@ -9,7 +9,7 @@
         <a href="/report">Reportes</a>
         <a href="/company">Empresas</a>
         <a href="/customer/view">Usuarios</a>
-        <a href="#">Inventarios</a>
+        <a href="/vault/load">Inventarios</a>
         <a href="#">Imprimir</a>
     </div>
 {% endblock %}
