--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -17,7 +17,7 @@
     <body>
         {% block logo %}
             <div class="logo">
-                <a href="/"><img src="{{asset('images/customer_logo.png')}}"/></a>
+                <a href="/"><img src="{{asset('images/company/'~logo)}}" width="320" height="78"/></a>
             </div>
         {% endblock %}
         <div class="row">
