--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -17,22 +17,30 @@
     <body>
         {% block logo %}
             <div class="logo">
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 <a href="/"><img src="{{asset('images/company/'~logo)}}" width="320" height="78"/></a>
+            {% else %}
+                <a href="/"><img src="{{asset('images/'~logo)}}" width="320" height="78"/></a>
+            {% endif %}
             </div>
         {% endblock %}
         <div class="row">
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                {% block menu %}{% endblock %}
-            </div>
-            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-                {% block content %}{% endblock %}
-            </div>
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                    {% block menu %}{% endblock %}
+                </div>
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+            {% else %}
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            {% endif %}
+                    {% block content %}{% endblock %}
+                </div>
         </div>
-        <div class="row">
+        <!--<div class="row">
             <div class="footer">
                 <button type="button" id="siguiente" class="btn btn-default btn-md">SIGUIENTE PASO</button>
             </div>
-        </div>
+        </div>-->
     </body>
     <script>
     $('#siguiente').on('click',function(){
