--- a/app/Resources/views/admin/report.html.twig
+++ b/app/Resources/views/admin/report.html.twig
@@ -8,40 +8,44 @@
     <h3>Reporte C&oacute;digos Entregados</h3>
     <br>
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-        <table class="table table-striped report">
-            <thead>
-                <!--<th class="encabezado">Mes</th>
-                <th class="encabezado">D&iacute;a</th>-->
-                <th class="encabezado">Total Asignados</th>
-                <th class="encabezado">Valor C&oacute;digos</th>
-                <th class="encabezado">Valor Promedio</th>
-            </thead>
-            <tbody>
-            {% set sum_total = 0 %}
-            {% set count_total = 0 %}
-            {% for item in data %}
-                <tr>
-                   <!-- <td class="fila-datos">{#item.date | date('F')#}</td>
-                    <td class="fila-datos">{#item.date#}</td>-->
-                    <td class="fila-datos">{{item.total}}</td>
-                    <td class="fila-datos">$ {{item.value | number_format(0, '.', ',')}}</td>
-                    {% set avg = item.value / item.total %}
-                    <td class="fila-datos">$ {{avg | number_format(2, '.', ',')}}</td>
-                    {% set count_total = count_total + item.total %}
-                    {% set sum_total = sum_total + item.value %}
-                </tr>
-            {% endfor %}
-            </tbody>
-            <tfoot>
-                <tr>
-                    <!--<td class="fila-datos" colspan="2"></td>-->
-                    <td class="fila-datos"><b>{{count_total | number_format(0, '.', ',')}}</b></td>
-                    <td class="fila-datos"><b>$ {{sum_total | number_format(0, '.', ',')}}</b></td>
-                    {% set avg_total = sum_total / count_total %}
-                    <td class="fila-datos"><b>$ {{avg_total | number_format(2, '.', ',')}}</b></td>
-                </tr>
-            </tfoot>
-        </table>
+        {% if data is empty%}
+            <p>En este momento no hay datos disponiles</p>
+        {%else%}
+            <table class="table table-striped report">
+                <thead>
+                    <!--<th class="encabezado">Mes</th>
+                    <th class="encabezado">D&iacute;a</th>-->
+                    <th class="encabezado">Total Asignados</th>
+                    <th class="encabezado">Valor C&oacute;digos</th>
+                    <th class="encabezado">Valor Promedio</th>
+                </thead>
+                <tbody>
+                {% set sum_total = 0 %}
+                {% set count_total = 0 %}
+                {% for item in data %}
+                    <tr>
+                       <!-- <td class="fila-datos">{#item.date | date('F')#}</td>
+                        <td class="fila-datos">{#item.date#}</td>-->
+                        <td class="fila-datos">{{item.total}}</td>
+                        <td class="fila-datos">$ {{item.value | number_format(0, '.', ',')}}</td>
+                        {% set avg = item.value / item.total %}
+                        <td class="fila-datos">$ {{avg | number_format(2, '.', ',')}}</td>
+                        {% set count_total = count_total + item.total %}
+                        {% set sum_total = sum_total + item.value %}
+                    </tr>
+                {% endfor %}
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <!--<td class="fila-datos" colspan="2"></td>-->
+                        <td class="fila-datos"><b>{{count_total | number_format(0, '.', ',')}}</b></td>
+                        <td class="fila-datos"><b>$ {{sum_total | number_format(0, '.', ',')}}</b></td>
+                        {% set avg_total = sum_total / count_total %}
+                        <td class="fila-datos"><b>$ {{avg_total | number_format(2, '.', ',')}}</b></td>
+                    </tr>
+                </tfoot>
+            </table>
+        {%endif%}
     </div>
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
         
