--- a/app/Resources/views/admin/report.html.twig
+++ b/app/Resources/views/admin/report.html.twig
@@ -8,7 +8,7 @@
     <h3>Reporte C&oacute;digos Entregados</h3>
     <br>
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-        {% if data is empty%}
+        {% if records < 1%}
             <p>En este momento no hay datos disponiles</p>
         {%else%}
             <table class="table table-striped report">
