--- a/app/Resources/views/admin/report.html.twig
+++ b/app/Resources/views/admin/report.html.twig
@@ -8,9 +8,16 @@
     <h3>Reporte C&oacute;digos Entregados</h3>
     <br>
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-        {% if records < 1%}
-            <p>En este momento no hay datos disponiles</p>
+        {% set flag = 0 %}
+        {% for item in data %}
+            {% if item.total > 0 %}
+                {% set flag = 1 %}
+            {% endif %}
+        {% endfor %}
+        {% if flag == 0 %}
+            <p>Sin datos para mostrar</p>
         {%else%}
+            
             <table class="table table-striped report">
                 <thead>
                     <!--<th class="encabezado">Mes</th>
