--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -19,7 +19,7 @@
                 <span class="custom-file-control"></span>
                 </label>
                 <br><br>
-            <input type="submit" class="btn btn-fluz" value="Cargar Clientes" />
+            <input type="submit" class="btn btn-fluz" value="Cargar usuarios" />
             <div class="nota">Si tienes problemas para subir tu CSV. Aseg&uacute;rate de que tu hoja de c&aacute;lculo est&eacute; formateada correctamente. Descargar <a href="{{asset('templates/members_template.csv')}}" class="link-down">CSV de Ejemplo</a></div>
         </div>
         {{ form_end(form) }}
