-Cambio de Diseño Formulario Asignación -Se Muestran Todos los usuarios en formulario asignación -Se muestra el conteo de bonos entregados -Se Arregla lista de selección de bonos -Asignación de Bonos Funcional -Se agrega menú en página de confirmación de asignación

--- a/app/Resources/views/member/listmembers.html.twig
+++ b/app/Resources/views/member/listmembers.html.twig
@@ -10,57 +10,46 @@
         <div class="row">
             <div class="float-left col-md-4">
                 <label for="tipo-bono" class="seleccion">Elije el tipo de bono a Asignar:</label>
-                <select class="asigna-bono" id="tipo-bono" name="tipo-bono">
+                <select class="asigna-bono" id="tipo-bono" name="tipo-bono" >
                     <option value="0" selected="selected">Elegir bono a Asignar</option>
                     {% for bono in bonos %}
-                        <option value="{{bono.code_value}}">Bono de $ {{bono.code_value|number_format(0,'.')}}</option>
+                        <option value="{{bono.code_value}}">{{bono.name}}  - $ {{bono.code_value|number_format(0,'.')}} </option>
                     {% endfor%}
                 </select>
             </div>
             <div class="float-right col-md-8">
-                <span class="tip">Se asignar&aacute; el bono seleccionado a <i>TODOS</i> los usuarios habilitados con la opci&oacute;n <span>{Seleccionar}</span></span>
+                <p style="text-align:right;"><input type="submit" class="btn btn-fluz" value="Asignar Bonos"></p>
             </div>
         </div>
-        <span class="tip">&Uacute;nicamente se muestran usuarios SIN BONOS asignados</span>
+                <hr>
     <table class="table table-striped members">
         <thead>
             <th class="encabezado">
                 <b><input type="radio" id="todos" name="marcar"/>&nbsp;Todos&nbsp;</b>
                 <b><input type="radio" id="ninguno" name="marcar"/>&nbsp;Ninguno&nbsp;</b>
             </th>
+            <th class="encabezado">Grupo<span>&#x21C5;</span></th>
             <th class="encabezado">Nombre<span>&#x21C5;</span></th>
             <th class="encabezado">Email<span>&#x21C5;</span></th>
             <th class="encabezado">Teléfono<span>&#x21C5;</span></th>
             <th class="encabezado">Identificación<span>&#x21C5;</span></th>
-            <!--<th class="encabezado">Bono a Asignar<span>&#x21C5;</span></th>-->
+            <th class="encabezado">Total Bonos Asignados<span>&#x21C5;</span></th>
         </thead>
         <tbody>
             {% for member in members %}
             <tr>
                 <td class="fila-datos"><p style="text-align:center;"><input type="checkbox" class="check" id="{{member.id}}" name="{{member.id}}"/></p></td>
+                <td class="fila-datos">{{ member.group.name }}</td>
                 <td class="fila-datos">{{ member.member_name }}</td>
                 <td class="fila-datos">{{ member.member_email }}</td>
                 <td class="fila-datos">{{ member.mobile_phone }}</td>
                 <td class="fila-datos">{{ member.identification }}</td>
-                <!--<td class="fila-datos">
-                    <span class="brand">Bodytech</span>
-                    <select class="asigna-bono" id="{{member.id}}" name="{{member.id}}">
-                        <option value="0" selected="selected">Sin Bono Asignado</option>
-                        {% for bono in bonos %}
-                            <option value="{{bono.code_value}}">Bono de $ {{bono.code_value|number_format(0,'.')}}</option>
-                        {% endfor%}
-                    </select>
-                </td>-->
+                <td class="fila-datos">{{ member.vault|length|number_format }}</td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
     </form>
-    <!--<div class="row" style="padding: 10px;">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 blanca">
-            <img class="occidente pull-right img-responsive" src="{{asset('images/banco-de-occidente.jpg')}}" />
-        </div>
-    </div>-->
 </div>
     <script>
            $(document).ready(function(){
