--- a/app/Resources/views/vault/results.html.twig
+++ b/app/Resources/views/vault/results.html.twig
@@ -1,5 +1,5 @@
 {% extends 'header.html.twig' %}
-
+{% use "menu.html.twig" %}
 {% block content %}
     <div id="wrapper" class="fondo">
         <div id="container">
