--- a/app/Resources/views/admin/menu.html.twig
+++ b/app/Resources/views/admin/menu.html.twig
@@ -10,6 +10,6 @@
         <a href="/company">Empresas</a>
         <a href="/customer/view">Usuarios</a>
         <a href="/vault/load">Inventarios</a>
-        <a href="#">Imprimir</a>
+        <!--<a href="#">Imprimir</a>-->
     </div>
 {% endblock %}
