--- a/app/Resources/views/member/detailmembers.html.twig
+++ b/app/Resources/views/member/detailmembers.html.twig
@@ -1,9 +1,13 @@
 {% extends 'header.html.twig' %}
 {% use "menu.html.twig" %}
 {% block content %}
+{% if error %}
+    <div id="error" class="alert"></div>
+{% endif %}
+<div id="result"></div>
 <div id="wrapper" class="container-fluid fondo">
     <input type="hidden" value="2" id="paso"/>
-    <h3>Detalle de Bonos de usuario</h3>
+    <h3>Detalle de Bonos de usuario {{member.member_name}}</h3>
     <div class="subtitulo">Este usuario tiene un total de <strong>{{ total }}</strong>&nbsp;Bonos Asignados</div>
     <hr>
     {% if total > 0 %}
@@ -29,8 +33,8 @@
                     <td class="fila-datos">{{ bono.expiration|date('Y-m-d') }}</td>
                     <td class="fila-datos">
                         <p style="text-align:center;">
-                            <a href="/member/detail?member={{member.id}}&code={{bono.id}}" class="btn btn-fluz btn-sm"><span class="glyphicon glyphicon-print"></span></a>
-                            <a href="/member/detail?member={{member.id}}&code={{bono.id}}" class="btn btn-fluz btn-sm"><span class="glyphicon glyphicon-send"></span></a>
+                            <a id="print" href="/vault/print?member={{member.id}}&code={{bono.id}}" class="btn btn-fluz btn-sm"><span class="glyphicon glyphicon-print"></span></a>
+                            <a id="send" href="#" member="{{member.id}}" code="{{bono.id}}" class="btn btn-fluz btn-sm"><span class="glyphicon glyphicon-send"></span></a>
                         </p>
                     </td>
                 </tr>
@@ -41,8 +45,10 @@
         <div class="alert alert-warning"><b>No hay Datos!!</b>. Este usuario no tiene bonos asignados.</div>
     {% endif %}
 </div>
+<div id="sending" style="position:absolute; top:20%; left:35%; display:none;"><img src="{{asset('images/sendmail.gif')}}" /></div>
 <script>
        $(document).ready(function(){
+           $('#sending').hide();
            $('.table').DataTable({
                "ordering": true,
                 "language": {
@@ -76,6 +82,29 @@
            if ($(this).is(':checked')) {
                $('.check').attr('checked', false);
            }
+       })
+       
+       $('#send').click(function(e){
+           e.preventDefault();
+           $.ajax({
+               method:"GET",
+               url: "/vault/send",
+               data: {
+                   'member': $(this).attr('member'),
+                   'code' : $(this).attr('code'),
+               },
+               beforeSend:function(){
+                   $('#sending').show();
+               },
+               success:function(response){
+                    $('#sending').hide();
+                    $('#result').html('<div id="error" class="alert alert-success">Mensaje enviado con &eacute;xito!!</div>')
+               },
+               error:function(response){
+                   $('#sending').hide();
+                   $('#result').html('<div id="error" class="alert alert-danger">Problemas al Enviar el mensaje. intenta de nuevo m&aacute;s tarde</div>');
+               }
+           })
        })
 </script>
 {% endblock %}
