-Envío de Correo electrónico con plantillas Personalizadas por Compañía.

--- a/app/Resources/views/admin/adminheader.html.twig
+++ b/app/Resources/views/admin/adminheader.html.twig
@@ -6,6 +6,7 @@
             <link rel="stylesheet" href="{{asset('css/admin/main.css')}}" />
             <link rel="stylesheet" href="{{asset('bundles/jquery-ui/jquery-ui.min.css')}}" />
             <link rel="stylesheet" href="{{asset('bundles/datatables/jquery.dataTables.min.css')}}" />
+            <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
             <!--<link rel="stylesheet" href="{{asset('bundles/datatables/dataTables.bootstrap.min.css')}}" />-->
             <script src="{{ asset('js/jquery.min.js') }}"></script>
             <script src="{{ asset('js/bootstrap/bootstrap.min.js') }}"></script>
