--- a/web/css/main.css
+++ b/web/css/main.css
@@ -96,21 +96,39 @@
 .nota{font-size: 0.7em; color:#000; font-style: italic; max-width: 350px; margin-top: 15px;}
 .link-down{color: #ef4136;}
 .link-down:hover{color: #c9b197;}
+.custom-file-control{
+    min-width: 284px;
+    min-height: 36px;
+    font-size: 10px;
+    line-height: 25px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 15px;
+}
+custom-file-control:hover{
+    cursor:pointer;
+}
 .custom-file-control:after{
+    position: absolute;
+    right: 0px;
     float: right;
+    z-index: 3;
     background-color: #FF592B;
     content: 'Buscar';
     color: #FFF;
     font-size: 13px;
-    margin-top: -7px;
-    margin-right: -15px;
+    margin-top: -6px;
     line-height: 36px;
     min-height: 36px;
     min-width: 70px;
     text-align: center;
     border-radius: 3px;
 }
-
+.fselect{
+    min-width: 284px;
+    min-height: 36px;
+}
 .footer{
     position: fixed;
     bottom: 0px;
