-Se Incluye Plantilla de Ejemplo de carga de Inventario

--- a/app/Resources/views/vault/inventoryUpload.html.twig
+++ b/app/Resources/views/vault/inventoryUpload.html.twig
@@ -6,6 +6,7 @@
 {% endif %}
 <div class="container-fluid">
     <h3>Carga de Inventarios</h3>
+    <div class="nota">Si tienes problemas para subir tu CSV. Aseg&uacute;rate de que tu hoja de c&aacute;lculo est&eacute; formateada correctamente. Descargar <a href="{{asset('templates/inventory_template.csv')}}" class="link-down">CSV de Ejemplo</a></div>
     <br>
     {{ form_start(form) }}
     <div class="form-group">
