--- a/web/css/admin/main.css
+++ b/web/css/admin/main.css
@@ -64,3 +64,7 @@
 .btn-xs{
     font-size: 0.8em;
 }
+
+.nota{font-size: 0.7em; color:#000; font-style: italic; max-width: 350px; margin-top: 15px;}
+.link-down{color: #ef4136;}
+.link-down:hover{color: #c9b197;}
