--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -7,7 +7,7 @@
             <link rel="stylesheet" href="{{asset('bundles/jquery-ui/jquery-ui.min.css')}}" />
             <link rel="stylesheet" href="{{asset('bundles/datatables/jquery.dataTables.min.css')}}" />
             <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-            <!--<link rel="stylesheet" href="{{asset('bundles/datatables/dataTables.bootstrap.min.css')}}" />-->
+            <link rel="shortcut icon" type="image/png" href="{{asset('images')}}/favicon.png"/>
             <script src="{{ asset('js/jquery.min.js') }}"></script>
             <script src="{{ asset('js/bootstrap/bootstrap.min.js') }}"></script>
             <script src="{{ asset('bundles/jquery-ui/jquery-ui.min.js') }}"></script>
