-Se Arregla Error de Filtrado de tablas -Se Personalizar iconos de ordenado

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -5,13 +5,13 @@
             <link rel="stylesheet" href="{{asset('css/bootstrap/bootstrap.min.css')}}" />
             <link rel="stylesheet" href="{{asset('css/main.css')}}" />
             <link rel="stylesheet" href="{{asset('bundles/jquery-ui/jquery-ui.min.css')}}" />
-            <link rel="stylesheet" href="{{asset('bundles/datatables/jquery.dataTables.min.css')}}" />
+            <link rel="stylesheet" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
             <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
             <link rel="shortcut icon" type="image/png" href="{{asset('images')}}/favicon.png"/>
             <script src="{{ asset('js/jquery.min.js') }}"></script>
             <script src="{{ asset('js/bootstrap/bootstrap.min.js') }}"></script>
             <script src="{{ asset('bundles/jquery-ui/jquery-ui.min.js') }}"></script>
-            <script src="{{ asset('bundles/datatables/jquery.dataTables.min.js') }}"></script>
+            <script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
             <!--<script src="{{ asset('bundles/datatables/dataTables.bootstrap.min.js') }}"></script>-->
         {% endblock %}
     </head>
