--- a/app/Resources/views/admin/viewCustomer.html.twig
+++ b/app/Resources/views/admin/viewCustomer.html.twig
@@ -35,4 +35,31 @@
         </table>
     </div>
 </div>
+<script>
+    $(document).ready(function(){
+        $('.table').DataTable({
+            "ordering": true,
+            "filter": true,
+            "language": {
+                "lengthMenu": "Mostrando _MENU_ registros por pagina",
+                "zeroRecords": "No hay registros",
+                "info": "Pagina _PAGE_ de _PAGES_",
+                "infoEmpty": "No hay registros",
+                "infoFiltered": "(filtrando de  _MAX_ registros)",
+                "sSearch": "Buscar:",
+                "sLoadingRecords": "Cargando...",
+                "oPaginate": {
+                    "sFirst":    "Primero",
+                    "sLast":     "Último",
+                    "sNext":     "Siguiente",
+                    "sPrevious": "Anterior"
+                 },
+                 "oAria": {
+                     "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+                     "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+                 }
+             }
+        })
+    })
+</script>
 {% endblock %}
