--- a/web/css/main.css
+++ b/web/css/main.css
@@ -351,3 +351,11 @@ custom-file-control:hover{
 .glyphicon-sort:hover {
    color:#FF592B;
 }
+
+table.dataTable thead .sorting_asc {
+    background-image: url(../images/sort_asc.png) !important;
+}
+
+table.dataTable thead .sorting_desc {
+    background-image: url(../images/sort_desc.png) !important;
+}
