--- a/app/Resources/views/vault/inventory.html.twig
+++ b/app/Resources/views/vault/inventory.html.twig
@@ -42,7 +42,7 @@
     $(document).ready(function(){
         $('.table').DataTable({
             "ordering": true,
-            "filter": false,
+            "filter": true,
             "language": {
                 "lengthMenu": "Mostrando _MENU_ registros por pagina",
                 "zeroRecords": "No hay registros",
