--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -9,7 +9,7 @@
 <div class="row banner-container">
         <div class="info-box">
             <form action="{{ path('login') }}" method="post" id="login_form" class="box">
-                <h3 class="page-subheading borde-inf">Beneficios Corporativos</h3>
+                <h3 class="page-subheading borde-inf">B&oacute;veda de Bonos Electr&oacute;nicos</h3>
                 <div class="line-separator"></div>
                 <div class="form_content clearfix">
                     <div class="form-group">
@@ -26,7 +26,7 @@
                             </span>
                         </button>
                     </p>
-                    <p class="lost_password form-group"><a href="#" rel="nofollow" style="text-decoration:underline;">Olvidaste tu contrase&ntilde;a, Fluzzer?</a></p>
+                    <!--<p class="lost_password form-group"><a href="#" rel="nofollow" style="text-decoration:underline;">Olvidaste tu contrase&ntilde;a, Fluzzer?</a></p>-->
                 </div>
                 <div class="line-separator"></div>
                 <!--div class="row footer-sign">
