-Cambio para aceptar CSV en formato separado ;

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -7,6 +7,7 @@
     <div id="wrapper" class="fondo container-fluid">
         <h3>Cargar usuarios para asignación de bonos</h3>
         <hr>
+        <p style="text-align: right;"><a href="/member/unique" class="btn btn-fluz">Crear un usuario</a></p>
         <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
         {{ form_start(form) }}
@@ -30,7 +31,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <span><b>Ejemplo del Archivo CSV:</b></span>
             <a href="{{asset('templates/members_template.csv')}}"><p><img class="img-responsive" src="{{asset('images/ejemplo_csv.png')}}" /></p></a>
-            <span class="note">Nota: Archivo CSV deliminado por coma (,)</span>
+            <!--<span class="note">Nota: Archivo CSV deliminado por coma (,)</span>-->
         </div>
         </div>
     </div>
