--- a/web/css/main.css
+++ b/web/css/main.css
@@ -359,3 +359,14 @@ table.dataTable thead .sorting_asc {
 table.dataTable thead .sorting_desc {
     background-image: url(../images/sort_desc.png) !important;
 }
+
+#form_delimiter label{
+    font-weight: bold;
+    line-height: 30px;
+    min-width: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding-right: 5px;
+    padding-left: 5px;
+}
